# MatrixPortalDemos

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  code_use.md  matrix-portal-camera-project.md
.claude/agents/: coding-agent.md
.github/workflows/: ci.yml
csharp/: LedPortal.slnx  README.md  csharp.sln
csharp/src/LedPortal/: LedPortal.csproj  Program.cs
csharp/src/LedPortal/Capture/: CameraFactory.cs  ICamera.cs  OpenCvCamera.cs
csharp/src/LedPortal/Config/: AppConfig.cs  ConfigLoader.cs
csharp/src/LedPortal/Exceptions/: LedPortalExceptions.cs
csharp/src/LedPortal/Processing/: ColorProcessor.cs  FrameResizer.cs  TestPatterns.cs  ZoomCropper.cs
csharp/src/LedPortal/Transport/: ITransport.cs  SerialTransport.cs  TransportFactory.cs
csharp/src/LedPortal/UI/: ConsoleHelp.cs  DemoMode.cs  InputCommand.cs  PreviewWindow.cs  SnapshotManager.cs
csharp/tests/LedPortal.Tests/: LedPortal.Tests.csproj  UnitTest1.cs
csharp/tests/LedPortal.Tests/Config/: ConfigTests.cs
csharp/tests/LedPortal.Tests/Fixtures/: FrameHelpers.cs
csharp/tests/LedPortal.Tests/Processing/: ColorProcessorTests.cs  FrameResizerTests.cs  TestPatternsTests.cs  ZoomCropperTests.cs
docs/: LED_Analysis.md  avatar.md  compare_rgb565.py  printing.md
emulator/: emulator.py  pyproject.toml
flappy-bird/: README.md  code.py
hs/: README.md  REQUIREMENTS.md  git.md  pyproject.toml
hs/mac/: camera_feed.py  config.py
hs/pi/: camera_feed.py  config.py
hs/src/: camera_feed.py  config.py
macropad/: 0_processing.py  1_effects.py  2_actions.py  3_orientation.py  4_system.py  README.md
matrix-portal/: README.md  boot.py  code.py
pi/: README.md  config.py  list_usb_devices.py  requirements.txt  test_camera.py
pro/: Makefile  README.md  pyproject.toml
pro/avatar_20260203_081859/: manifest.json
pro/config/: default.yaml  mac.yaml  pi.yaml
pro/src/ledportal_pro/: __init__.py  config.py  exceptions.py  main.py
pro/src/ledportal_pro/avatar/: __init__.py  builder.py  cli.py  drivers.py  loop.py  player.py  preview.py  resolver.py  schema.py
pro/src/ledportal_pro/avatar/drivers_impl/: __init__.py  keyboard.py  webcam.py
pro/src/ledportal_pro/capture/: __init__.py  base.py  factory.py  opencv.py  picamera.py
pro/src/ledportal_pro/processing/: __init__.py  color.py  patterns.py  resize.py  zoom.py
pro/src/ledportal_pro/transport/: __init__.py  base.py  factory.py  pipe.py  serial.py
pro/src/ledportal_pro/ui/: __init__.py  avatar.py  demo.py  input.py  overlay.py  snapshot.py  tts.py
pro/tests/: conftest.py  test_avatar.py  test_avatar_schema.py  test_blink_filter.py  test_builder.py  test_color.py  test_config.py  test_demo.py  test_exceptions.py  test_input.py  test_keyboard_driver.py  test_loop.py  test_overlay.py  test_patterns.py  test_player.py  test_resize.py  test_resolver.py  test_snapshot.py  test_tts.py  test_webcam_driver.py  test_zoom.py
proposals/: digital-avatar.md  ledsimulation.md
sandbox/: README.md  camera_feed.py  check_camera.py  config.py  list_usb_devices.py  pyproject.toml  test_both_ports.py  test_camera.py  test_ports.py
tests/: test_protocol.py  test_sender.py
utils/: README.md  pyproject.toml
utils/src/ledportal_utils/: __init__.py  snapshot.py
utils/tests/: conftest.py  test_snapshot.py
