[project]
name = "ledportal-pro"
version = "0.1.0"
description = "Professional LED Matrix camera feed system for Raspberry Pi and macOS"
readme = "README.md"
requires-python = ">=3.14"
license = { text = "MIT" }
authors = [{ name = "LED Portal Team" }]
dependencies = [
    "numpy>=1.24.0",
    "opencv-python>=4.8.0",
    "pyserial>=3.5",
    "pyyaml>=6.0",
    "pillow>=10.0.0",
    "ledportal-utils",
]

[project.scripts]
ledportal = "ledportal_pro.main:main"

[tool.uv.sources]
ledportal-utils = { path = "../utils", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ledportal_pro"]

[dependency-groups]
dev = ["ruff>=0.4.0", "ty>=0.0.1a6", "pytest>=8.0"]

[tool.ruff]
line-length = 100
target-version = "py314"
src = ["src"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "SIM105", # contextlib.suppress - try/except/pass is often clearer
]

[tool.ruff.lint.isort]
known-first-party = ["ledportal_pro"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ty.environment]
python-version = "3.14"

[tool.ty.rules]
# Ignore unresolved-import for optional dependencies (picamera2)
unresolved-import = "ignore"
# Ignore numpy array type mismatches - OpenCV returns generic arrays
invalid-return-type = "warn"
unsupported-operator = "ignore"
